# Desktop_shader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: IBO.h  VAO.h  VBO.h  glAPI.h  mygl.h  renderer.h  renderline.h  shader.h  system.h
res/: VAO.cpp  main.cpp  renderer.cpp  renderline.cpp
shaders/: fs.frag  vs.vert
src/: IBO.cpp  VAO.cpp  VBO.cpp  main.cpp  mygl.cpp  renderer.cpp  renderline.cpp  shader.cpp
